# jsonast-cxx

./: CMakeLists.txt  cmake.sh
src/: main.cc
src/json/: ast.hh  lex.cc  parser.cc  parser.hh
test/: t1.json  t3.json
